// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button applies theme and style props 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "hsl(190, 95%, 30%)",
        "padding": 12,
      },
      null,
      Object {
        "backgroundColor": "blue",
      },
      null,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "hsl(0, 0%, 100%)",
          "fontSize": 16,
          "fontWeight": "700",
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    A pressable button
  </Text>
</View>
`;

exports[`Button renders as expected with a component passed as children 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "hsl(190, 95%, 30%)",
        "padding": 12,
      },
      null,
      null,
      null,
    ]
  }
>
  <Text>
    A pressable button
  </Text>
</View>
`;

exports[`Button renders as expected with a string passed as children 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "hsl(190, 95%, 30%)",
        "padding": 12,
      },
      null,
      null,
      null,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "hsl(0, 0%, 100%)",
          "fontSize": 16,
          "fontWeight": "700",
        },
        undefined,
      ]
    }
  >
    A pressable button
  </Text>
</View>
`;
